--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,1 +1,73 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
+/* Color variables */
+/* Border Radius */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+body {
+  font-family: "Noto Sans", sans-serif;
+  color: #4c5067;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+  justify-content: center;
+  margin: 2rem;
+}
+
+.card {
+  display: flex;
+  border-radius: 0.2rem;
+  min-width: 28rem;
+  box-shadow: 0 0 10px 5px #dee3ed;
+}
+.card-image {
+  width: 14rem;
+  height: 11rem;
+  object-fit: cover;
+}
+.card-body {
+  margin: 1rem;
+  flex-grow: 1;
+}
+.card-title {
+  margin-bottom: 0.5rem;
+  line-height: 1.8rem;
+}
+.card-description {
+  line-height: 1.2rem;
+}
+.card-price {
+  margin-top: 0.6rem;
+  font-size: 1.4rem;
+}
+.card-price::before {
+  content: "$";
+  position: relative;
+  top: -0.3rem;
+  padding-right: 0.1rem;
+  font-size: 1rem;
+}
+.card-btn {
+  width: 100%;
+  border: none;
+  border-top: 1px solid #4c5067;
+  color: inherit;
+  background-color: transparent;
+  margin-top: 1rem;
+  padding-top: 1rem;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+.card-btn:hover {
+  color: #0040ff;
+}
