--- a/src/css/App.css
+++ b/src/css/App.css
@@ -71,3 +71,19 @@ body {
 .card-btn:hover {
   color: #0040ff;
 }
+
+@media screen and (min-width: 600px) {
+  .container {
+    grid-template-columns: repeat(auto-fit, minmax(14rem, 16rem));
+  }
+
+  .card {
+    flex-direction: column;
+    text-align: center;
+    min-width: 14rem;
+  }
+  .card-image {
+    width: 100%;
+    height: 16rem;
+  }
+}
