--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -77,3 +77,17 @@ body {
     }
   }
 }
+@media screen and (min-width: 600px) {
+  .container {
+    grid-template-columns: repeat(auto-fit, minmax(14rem, 16rem));
+  }
+  .card {
+    flex-direction: column;
+    text-align: center;
+    min-width: 14rem;
+    &-image {
+      width: 100%;
+      height: 16rem;
+    }
+  }
+}
